--- a/HJ/210126_programmers_lv3_등굣길.ipynb
+++ b/HJ/210126_programmers_lv3_등굣길.ipynb
@@ -2,50 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[[0, 0, 0, 0], [0, -1, -1, -1], [0, 0, 0, 0], [0, 0, 0, 0]]\n0 0\n1 0\n2 0\n3 0\n0 1\n1 1\n2 1\n3 1\n0 2\n1 2\n2 2\n3 2\n0 3\n1 3\n2 3\n3 3\n"
+      "[[1, 1, 0, 0], [1, 1, 1, 1], [0, 1, 1, 1]]\n[[1, 1, 0, 0], [1, 2, 2, 2], [0, 2, 4, 6]]\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "4"
+       "6"
       ]
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 53
     }
    ],
    "source": [
     "def solution(m, n, puddles):\n",
     "    answer = 0\n",
-    "    mat=[[0]*m for _ in range(n)]\n",
-    "    for pud in puddles:\n",
-    "        mat[pud[0]-1][pud[1]-1]=-1\n",
-    "    print(mat)\n",
-    "    for j in range(m):\n",
-    "        for i in range(n):\n",
-    "            print(i,j)\n",
-    "            if mat[i][j] == -1: continue\n",
-    "            if i==0 or j==0 : \n",
-    "                mat[i][j]=1\n",
-    "                continue\n",
-    "            elif mat[i][j-1]== -1 : mat[i][j]=mat[i-1][j]\n",
-    "            elif mat[i-1][j]== -1 : mat[i][j]=mat[i][j-1]\n",
-    "            else: mat[i][j]=mat[i-1][j]+mat[i][j-1]\n",
+    "    mat=[[1]*m for _ in range(n)]\n",
+    "    for y,x in puddles:\n",
+    "        i=x-1\n",
+    "        j=y-1\n",
+    "        mat[i][j]=0\n",
+    "        if i==0:\n",
+    "            for k in range(j,m):\n",
+    "                mat[0][k]=0\n",
+    "        if j==0:\n",
+    "            for k in range(i,n):\n",
+    "                mat[k][0]=0\n",
+    "    # print(mat)\n",
+    "    for i in range(1,n):\n",
+    "        for j in range(1,m):\n",
+    "            if mat[i][j] > 0 :\n",
+    "                mat[i][j] = mat[i-1][j] + mat[i][j-1]\n",
+    "    # print(mat)\n",
     "    return mat[n-1][m-1]\n",
     "\n",
     "\n",
     "m=4\n",
-    "n=4\n",
-    "puddles=[[2,2],[2,3],[2,4]]\n",
+    "n=3\n",
+    "puddles=[[1,3],[3,1]]\n",
     "solution(m,n,puddles)"
    ]
   },
@@ -61,7 +64,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(m, n, puddles):\n",
+    "    dp = [[1]*m for _i in range(n)]\n",
+    "    \n",
+    "    for x,y in puddles:\n",
+    "        dp[y-1][x-1] = 0\n",
+    "        if x-1 == 0:\n",
+    "            for k in range(y-1,n):\n",
+    "                dp[k][0]=0\n",
+    "        if y-1 == 0:\n",
+    "            for k in range(x-1,m):\n",
+    "                dp[0][k]=0\n",
+    "\n",
+    "    for i in range(1,n):\n",
+    "        for j in range(1,m):\n",
+    "            if i*j != 0:\n",
+    "                if dp[i][j] != 0:\n",
+    "                    dp[i][j] = dp[i-1][j] + dp[i][j-1]\n",
+    "    answer = dp[n-1][m-1]\n",
+    "    return answer%1000000007"
+   ]
   },
   {
    "cell_type": "code",
