--- a/HJ/201215_programmers_Heap_더맵게.ipynb
+++ b/HJ/201215_programmers_Heap_더맵게.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[링크](https://programmers.co.kr/learn/courses/30/lessons/42626)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
