--- a/HJ/210404_Greedy_큰수만들기.ipynb
+++ b/HJ/210404_Greedy_큰수만들기.ipynb
@@ -10,15 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.0-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "Python 3.8.0 64-bit ('codestates': conda)",
    "metadata": {
     "interpreter": {
-     "hash": "39a3f6769e595a50e593a296d8b0c78e5171348aaba449e974344d6732d07a14"
+     "hash": "fadc0cf148511e913432907e7552089c1c0a3aee5ad75d70a741eb25cd3cd508"
     }
    }
   }
@@ -69,11 +69,72 @@
     "            \n",
     "        \n",
     "\n",
-    "\n",
     "    return ans\n",
     "solution(num,k)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "77252841\n\n['7', '7', '2', '5', '2', '8', '4'] 1\n\n['7', '7', '5', '2', '8', '4'] 2\n\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['7', '7', '5', '2', '8', '4']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "num=\"4177252841\"\n",
+    "k=4\n",
+    "def solution(num,k):\n",
+    "    # nums = sorted(set(num))\n",
+    "    first=0\n",
+    "\n",
+    "    for i in range(k):\n",
+    "        if num[i]<num[i+1]:\n",
+    "            first = i+1\n",
+    "        else:\n",
+    "            pass\n",
+    "    num = num[first:]\n",
+    "    ans=list(num)\n",
+    "    after_k = k-first\n",
+    "    nums = sorted(set(num))\n",
+    "    removed=0\n",
+    "    print(num)\n",
+    "    for i,v in enumerate(nums):\n",
+    "        print()\n",
+    "        if after_k+removed == k:\n",
+    "            break\n",
+    "        while v in ans and after_k + removed < k:\n",
+    "            ans.remove(v)\n",
+    "            removed+=1\n",
+    "            print(ans , v)\n",
+    "        \n",
+    "\n",
+    "    return ans\n",
+    "solution(num,k)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
