--- a/HJ/201230_programmers_lv3_입국심사.ipynb
+++ b/HJ/201230_programmers_lv3_입국심사.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "source": [
+    "입국 심사를 기다리는 사람 수 n\n",
+    "각 심사관이 한명을 심사하는데 걸리는 시간이 담긴 배열 times \n",
+    "모든 사람이 심사를 받는데 걸리는 시간의 최솟값 return"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {
@@ -101,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-12-30T17:10:40.616091Z",
@@ -110,70 +119,71 @@
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "30\n",
-      "4\n",
-      "7\n",
-      "7\n",
-      "15\n",
-      "2\n",
-      "3\n",
-      "3\n",
-      "22\n",
-      "3\n",
-      "5\n",
-      "5\n",
-      "26\n",
-      "3\n",
-      "5\n",
-      "5\n",
-      "28\n",
-      "4\n",
-      "6\n",
-      "6\n",
-      "27\n",
-      "3\n",
-      "5\n",
-      "5\n"
+      "left : 7, right : 60\nmid 계산 :  33\n입국심사 받은사람 카운팅 7 4\n입국심사 받은사람 카운팅 10 7\nserved가 더 많아지므로 right 변경\nleft : 7, right : 32\nmid 계산 :  19\n입국심사 받은사람 카운팅 7 2\n입국심사 받은사람 카운팅 10 3\nserved가 더 부족해서 left변경\nleft : 20, right : 32\nmid 계산 :  26\n입국심사 받은사람 카운팅 7 3\n입국심사 받은사람 카운팅 10 5\nserved가 더 부족해서 left변경\nleft : 27, right : 32\nmid 계산 :  29\n입국심사 받은사람 카운팅 7 4\n입국심사 받은사람 카운팅 10 6\nserved가 더 많아지므로 right 변경\nleft : 27, right : 28\nmid 계산 :  27\n입국심사 받은사람 카운팅 7 3\n입국심사 받은사람 카운팅 10 5\nserved가 더 부족해서 left변경\nleft : 28, right : 28\nmid 계산 :  28\n입국심사 받은사람 카운팅 7 4\n입국심사 받은사람 카운팅 10 6\nserved가 더 많아지므로 right 변경\n"
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "28"
       ]
      },
-     "execution_count": 53,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 12
     }
    ],
    "source": [
     "def solution(n,times):\n",
     "    answer=0\n",
-    "    left=1\n",
+    "    left=min(times)*min(1,n)\n",
     "    right=n * max(times)\n",
     "\n",
     "    while left<=right:\n",
     "        mid=(left+right)//2\n",
-    "        print(mid)\n",
+    "        print(f\"left : {left}, right : {right}\")\n",
+    "        print('mid 계산 : ',mid)\n",
     "        served=0\n",
     "        for i in times:\n",
     "            served+=mid//i\n",
-    "            print(served)\n",
+    "            print('입국심사 받은사람 카운팅',i,served)\n",
     "            if served >= n:\n",
+    "                print('served가 더 많아지므로 right 변경')\n",
     "                right=mid-1\n",
     "                answer=mid\n",
     "                break\n",
-    "        print(served)\n",
+    "        # print(served)\n",
     "        if served < n:\n",
+    "            print('served가 더 부족해서 left변경')\n",
     "            left = mid+1\n",
     "\n",
     "    return answer\n",
     "solution(6,[7,10])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -243,9 +253,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python385jvsc74a57bd039a3f6769e595a50e593a296d8b0c78e5171348aaba449e974344d6732d07a14",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -257,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
