2019카카오겨울인턴_튜플

--- a/HJ/201228_programmers_lv3_가장먼노드.ipynb
+++ b/HJ/201228_programmers_lv3_가장먼노드.ipynb
@@ -227,6 +227,130 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vertex=[[3, 6], [4, 3], [3, 2], [1, 3], [1, 2], [2, 4], [5, 2]]\t\n",
+    "n=6\n",
+    "def solution(n=n,vertex=vertex):\n",
+    "    answer=0\n",
+    "    return answer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "defaultdict(list,\n",
+       "            {3: [6, 4, 2, 1],\n",
+       "             6: [3],\n",
+       "             4: [3, 2],\n",
+       "             2: [3, 1, 4, 5],\n",
+       "             1: [3, 2],\n",
+       "             5: [2]})"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "graph=defaultdict(list)\n",
+    "for fr,to in vertex:\n",
+    "    graph[fr].append(to)\n",
+    "    graph[to].append(fr)\n",
+    "graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 105
+    }
+   ],
+   "source": [
+    "graph\n",
+    "\n",
+    "q=[[1,0],]\n",
+    "check=[-1]*(len(graph.keys())+1)\n",
+    "while q:\n",
+    "    index, depth = q.pop(0)\n",
+    "    check[index] = depth\n",
+    "    for i in graph[index]:\n",
+    "        if check[i]==-1:\n",
+    "            check[i]=0\n",
+    "            q.append([i,depth+1])\n",
+    "    depth+=1\n",
+    "check.count(max(check))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6]\n[0, 0, 1, 4, 3, 2, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([0,1,2,3,4,5,6])\n",
+    "print(depth)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "metadata": {
     "ExecuteTime": {
@@ -387,9 +511,91 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "source": [
+    "class Graph():\n",
+    "    def __init__(self, num_edge, vertices):\n",
+    "        self.vertex = [None]\n",
+    "        self.num_edge = num_edge\n",
+    "        for num in range(num_edge):\n",
+    "            self.vertex.append([])\n",
+    "        self.createGraph(vertices)\n",
+    "    def createGraph(self, vertices):\n",
+    "        for vertex in vertices:\n",
+    "            self.vertex[vertex[0]].append(vertex[1])\n",
+    "            self.vertex[vertex[1]].append(vertex[0])\n",
+    "    def shortestNodes(self):\n",
+    "        dist = [float('inf')] * (self.num_edge + 1)\n",
+    "        q = [(1, 0)]\n",
+    "        while len(q) > 0:\n",
+    "            (cur, depth) = q.pop(0)\n",
+    "            if depth < dist[cur]:\n",
+    "                dist[cur] = depth\n",
+    "                for edge in self.vertex[cur]:\n",
+    "                    q.append((edge, depth + 1))\n",
+    "        dist = [x for x in dist if x < float('inf')]\n",
+    "        print(dist)\n",
+    "        max_dist = max(dist)\n",
+    "        dist = list(filter(lambda x: x == max_dist, dist))\n",
+    "        return len(dist)\n",
+    "\n",
+    "def solution(n, edge):\n",
+    "    g = Graph(n, edge)\n",
+    "    return g.shortestNodes()"
+   ],
+   "cell_type": "code",
    "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "\n",
+    "def bfs(graph, start, distances):\n",
+    "    q = [start]\n",
+    "    visited = set([start])\n",
+    "\n",
+    "    while len(q) > 0:\n",
+    "        current = q.pop(0)\n",
+    "        for neighbor in graph[current]:\n",
+    "            if neighbor not in visited:\n",
+    "                visited.add(neighbor)\n",
+    "                q.append(neighbor)\n",
+    "                distances[neighbor] = distances[current] + 1\n",
+    "\n",
+    "def solution(n, edge):\n",
+    "    # 그래프 만들기\n",
+    "    graph = defaultdict(list)\n",
+    "\n",
+    "    for e in edge:\n",
+    "        graph[e[0]].append(e[1])\n",
+    "        graph[e[1]].append(e[0])\n",
+    "\n",
+    "    # bfs 탐색 (최단 거리를 구해야 하므로.)\n",
+    "    distances = [0]*(n+1)\n",
+    "    bfs(graph, 1, distances)\n",
+    "\n",
+    "    max_distance = max(distances)\n",
+    "    answer = 0\n",
+    "\n",
+    "    for distance in distances:\n",
+    "        if distance == max_distance:\n",
+    "            answer += 1\n",
+    "\n",
+    "    return answer"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -399,9 +605,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python385jvsc74a57bd039a3f6769e595a50e593a296d8b0c78e5171348aaba449e974344d6732d07a14",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
