--- a/HJ/201215_programmers_Heap_더맵게.ipynb
+++ b/HJ/201215_programmers_Heap_더맵게.ipynb
@@ -282,10 +282,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(4, False)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 74
+    }
+   ],
+   "source": [
+    "def solution(s):\n",
+    "    if len(s)==0 : return 1\n",
+    "    answer = 0\n",
+    "    idx, check =checkDouble(s)\n",
+    "    # print(s, idx, check)\n",
+    "    if check:\n",
+    "        if len(s)>idx+2:\n",
+    "            s = s[:idx] + s[idx+2:]\n",
+    "        else:\n",
+    "            # print('len check',s)\n",
+    "            s = s[:idx]\n",
+    "        return solution(s)\n",
+    "    return 0\n",
+    "\n",
+    "def checkDouble(s):\n",
+    "    idx=0\n",
+    "    # print(s,idx)\n",
+    "    while idx <= len(s)-2:\n",
+    "        if s[idx]==s[idx+1]:\n",
+    "            return idx, True\n",
+    "        else: \n",
+    "            idx += 1\n",
+    "    return idx, False\n",
+    "# solution('bbaabb')\n",
+    "# checkDouble('ababa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 72
+    }
+   ],
+   "source": [
+    "tmp = 'ss'\n",
+    "tmp[:0]"
+   ]
   }
  ],
  "metadata": {
