--- a/HJ/크루스칼알고리즘.ipynb
+++ b/HJ/크루스칼알고리즘.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "4 5 1\n[0, 1, 2, 3, 4, 5, 6]\nfind :  4 5\n5 6 2\n[0, 1, 2, 3, 4, 4, 6]\nfind :  4 6\n3 5 3\n[0, 1, 2, 3, 4, 4, 4]\nfind :  3 4\n1 3 5\n[0, 1, 2, 3, 3, 4, 4]\nfind :  1 3\n4 6 7\n[0, 1, 2, 1, 3, 4, 4]\nfind :  1 1\n2 4 9\n[0, 1, 2, 1, 1, 4, 1]\nfind :  2 1\n최소신장트리:  [(4, 5), (5, 6), (3, 5), (1, 3), (2, 4)]\n최소신장트리 가중치: 20\n"
+     ]
+    }
+   ],
    "source": [
     "graph=[(1,2,13),(1,3,5),(2,4,9),(3,4,15),(3,5,3),(4,5,1),(4,6,7),(5,6,2)]\n",
     "\n",
@@ -34,6 +42,9 @@
     "    if tree_edges == n-1:\n",
     "        break\n",
     "    u, v, wt =graph.pop(0)\n",
+    "    print(u,v,wt)\n",
+    "    print(p)\n",
+    "    print('find : ',find(u), find(v))\n",
     "    if find(u) != find(v): # u와 v가 서로 다른 집합에 속해 있으면\n",
     "        union(u, v)\n",
     "        mst.append((u, v)) \n",
@@ -62,16 +73,16 @@
    "source": [
     "## 유튜브 나동빈님 크루스칼 영상\n",
     "#특정 원소가 속한 집합 찾기\n",
-    "def fint_parent(parent, x):\n",
+    "def find_parent(parent, x):\n",
     "    # 루트 노드를 찾을 때 까지 재귀 호출\n",
     "    if parent[x] != x:\n",
-    "        parent[x] = fint_parent(parent, parent[x])\n",
+    "        parent[x] = find_parent(parent, parent[x])\n",
     "    return parent[x]\n",
     "\n",
     "#두 원소가 속한 집합을 합치기\n",
     "def union_parent(parent,a,b):\n",
     "    a = find_parent(parent,a)\n",
-    "    b = fint_parent(parent,b)\n",
+    "    b = find_parent(parent,b)\n",
     "    if a<b:\n",
     "        parent[b] = a\n",
     "    else:\n",
@@ -106,13 +117,56 @@
     "        result += cost\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edges = [[0,1,9],[1,2,2],[0,2,12],[0,3,8],[0,5,11],[2,3,6],[2,4,7],[3,4,3],[3,5,4],[4,5,13]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python385jvsc74a57bd039a3f6769e595a50e593a296d8b0c78e5171348aaba449e974344d6732d07a14",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
