--- a/HJ/2021KAKAOBLIND_합승택시요금.ipynb
+++ b/HJ/2021KAKAOBLIND_합승택시요금.ipynb
@@ -40,18 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "82"
+       "13"
       ]
      },
      "metadata": {},
-     "execution_count": 148
+     "execution_count": 10
     }
    ],
    "source": [
@@ -75,12 +75,13 @@
     "    while hpq : \n",
     "        curDist, curVertex = heappop(hpq)\n",
     "        if distances[curVertex] < curDist : continue\n",
-    "        for wt, fr, to in graph.get(curVertex):\n",
-    "            new_dist = curDist + wt\n",
-    "            if new_dist < distances[to]:\n",
-    "                distances[to] = new_dist\n",
-    "                frm[to] = curVertex\n",
-    "                hpq.append([new_dist, to])\n",
+    "        if graph.get(curVertex):\n",
+    "            for wt, fr, to in graph.get(curVertex):\n",
+    "                new_dist = curDist + wt\n",
+    "                if new_dist < distances[to]:\n",
+    "                    distances[to] = new_dist\n",
+    "                    frm[to] = curVertex\n",
+    "                    hpq.append([new_dist, to])\n",
     "\n",
     "    return distances, frm\n",
     "        \n",
@@ -102,19 +103,25 @@
     "\n",
     "\n",
     "def solution(n,s,a,b,fares):\n",
-    "    answer = 0\n",
+    "    answer = []\n",
     "    graph = mkgraph(fares)\n",
-    "    dist_fr_start , path_fr_start= dijkstra(graph, s)\n",
     "    \n",
-    "    dist_fr_a, path_fr_a = dijkstra(graph, a)\n",
-    "    path_a2b , withpay = find_path(dist_fr_a, path_fr_a, a , b)\n",
-    "    # print(graph)\n",
-    "    tmp = min(dist_fr_start[a]+dist_fr_start[b] , withpay + min([dist_fr_start[i] for i in path_a2b]))\n",
+    "    # dist_fr_start , path_fr_start= dijkstra(graph, s)\n",
     "    \n",
-    "    return tmp\n",
+    "    # dist_fr_a, path_fr_a = dijkstra(graph, a)\n",
+    "    # path_a2b , withpay = find_path(dist_fr_a, path_fr_a, a , b)\n",
+    "    \n",
+    "    \n",
+    "    # tmp = min(dist_fr_start[a]+dist_fr_start[b] , withpay + min([dist_fr_start[i] for i in path_a2b]))\n",
+    "    for i in range(1, n+1):\n",
+    "        dt,_ = dijkstra(graph,i)\n",
     "\n",
-    "fares = [[4, 1, 10], [3, 5, 24], [5, 6, 2], [3, 1, 41], [5, 1, 24], [4, 6, 50], [2, 4, 66], [2, 3, 22], [1, 6, 25]]\n",
-    "# fares=\t[[2,6,6], [6,3,7], [4,6,7], [6,5,11], [2,5,12], [5,3,20], [2,4,8], [4,3,9]]\n",
+    "        answer.append(dt[s] + dt[a] + dt[b])\n",
+    "\n",
+    "    return min(answer)\n",
+    "\n",
+    "# fares = [[4, 1, 10], [3, 5, 24], [5, 6, 2], [3, 1, 41], [5, 1, 24], [4, 6, 50], [2, 4, 66], [2, 3, 22], [1, 6, 25]]\n",
+    "fares=\t[[2,6,6], [6,3,7], [4,6,7], [6,5,11], [2,5,12], [5,3,20], [2,4,8], [4,3,9]]\n",
     "# fares = [[5, 7, 9], [4, 6, 4], [3, 6, 1], [3, 2, 3], [2, 1, 6]]\n",
     "\n",
     "n,s,a,b = 6,4,6,2\n",
