--- a/HJ/temp_python.ipynb
+++ b/HJ/temp_python.ipynb
@@ -310,6 +310,218 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tmp=[\n",
+    "    [1,1,1,1,1],\n",
+    "    [1,1,1,0,1],\n",
+    "    [1,1,1,1,1],\n",
+    "    [1,1,1,1,1],\n",
+    "    [1,1,1,1,1]]\n",
+    "\n",
+    "# x = 1  , y = 3\n",
+    "# for x in range(0,len(tmp)):\n",
+    "#     for y in range(0,len(tmp[0])):\n",
+    "#         if tmp[x][y]==0:\n",
+    "#             print(x,y)\n",
+    "#             print([i[:] for i in tmp[:x]] ) # up\n",
+    "#             print([i[:y] for i in tmp[:]]) # left\n",
+    "#             print([i[y+1:] for i in tmp[:]]) # right\n",
+    "#             print([i[:] for i in tmp[x+1:]]) # down\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[1, 1, 1, 1, 1], [1, 0, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\nwidth : 5 \thieght :  5\nfor문 ::  x : 0 \ty : 0 \t 1\nfor문 ::  x : 0 \ty : 1 \t 1\nfor문 ::  x : 0 \ty : 2 \t 1\nfor문 ::  x : 0 \ty : 3 \t 1\nfor문 ::  x : 0 \ty : 4 \t 1\nfor문 ::  x : 1 \ty : 0 \t 1\nfor문 ::  x : 1 \ty : 1 \t 0\n[[1, 1, 1, 1, 1]]\nwidth : 5 \thieght :  1\nfor문 ::  x : 0 \ty : 0 \t 1\nfor문 ::  x : 0 \ty : 1 \t 1\nfor문 ::  x : 0 \ty : 2 \t 1\nfor문 ::  x : 0 \ty : 3 \t 1\nfor문 ::  x : 0 \ty : 4 \t 1\n[[1], [1], [1], [1], [1]]\nwidth : 1 \thieght :  5\nfor문 ::  x : 0 \ty : 0 \t 1\nfor문 ::  x : 1 \ty : 0 \t 1\nfor문 ::  x : 2 \ty : 0 \t 1\nfor문 ::  x : 3 \ty : 0 \t 1\nfor문 ::  x : 4 \ty : 0 \t 1\n[[1, 1, 1], [1, 1, 1], [1, 1, 1], [1, 1, 1], [1, 1, 1]]\nwidth : 3 \thieght :  5\nfor문 ::  x : 0 \ty : 0 \t 1\nfor문 ::  x : 0 \ty : 1 \t 1\nfor문 ::  x : 0 \ty : 2 \t 1\nfor문 ::  x : 1 \ty : 0 \t 1\nfor문 ::  x : 1 \ty : 1 \t 1\nfor문 ::  x : 1 \ty : 2 \t 1\nfor문 ::  x : 2 \ty : 0 \t 1\nfor문 ::  x : 2 \ty : 1 \t 1\nfor문 ::  x : 2 \ty : 2 \t 1\nfor문 ::  x : 3 \ty : 0 \t 1\nfor문 ::  x : 3 \ty : 1 \t 1\nfor문 ::  x : 3 \ty : 2 \t 1\nfor문 ::  x : 4 \ty : 0 \t 1\nfor문 ::  x : 4 \ty : 1 \t 1\nfor문 ::  x : 4 \ty : 2 \t 1\n[[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\nwidth : 5 \thieght :  3\nfor문 ::  x : 0 \ty : 0 \t 1\nfor문 ::  x : 0 \ty : 1 \t 1\nfor문 ::  x : 0 \ty : 2 \t 1\nfor문 ::  x : 0 \ty : 3 \t 1\nfor문 ::  x : 0 \ty : 4 \t 1\nfor문 ::  x : 1 \ty : 0 \t 1\nfor문 ::  x : 1 \ty : 1 \t 1\nfor문 ::  x : 1 \ty : 2 \t 1\nfor문 ::  x : 1 \ty : 3 \t 1\nfor문 ::  x : 1 \ty : 4 \t 1\nfor문 ::  x : 2 \ty : 0 \t 1\nfor문 ::  x : 2 \ty : 1 \t 1\nfor문 ::  x : 2 \ty : 2 \t 1\nfor문 ::  x : 2 \ty : 3 \t 1\nfor문 ::  x : 2 \ty : 4 \t 1\n15\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 가장 큰 사각형의 넓이\n",
+    "def square(square_list):\n",
+    "    if square_list:\n",
+    "        width = len(square_list[0])\n",
+    "        height = len(square_list)\n",
+    "        space = 0\n",
+    "        for x in range(0,height):\n",
+    "            for y in range(0,width):\n",
+    "                if square_list[x][y] == 1:\n",
+    "                    space+=1\n",
+    "                else:\n",
+    "\n",
+    "                    a=square([i[:] for i in square_list[:x]]) # up\n",
+    "                    b=square([i[:y] for i in square_list[:]]) # left\n",
+    "                    c=square([i[y+1:] for i in square_list[:]]) # right\n",
+    "                    d=square([i[:] for i in square_list[x+1:]]) # down          \n",
+    "                    return max(a,b,c,d)\n",
+    "        return space\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "\n",
+    "\n",
+    "# square_list = [[0,1,1,1],[1,1,1,1]]\n",
+    "# print(square(square_list))\n",
+    "# 6\n",
+    "# square_list = [[0,0,1,1],[1,1,1,1],[1,1,1,1],[1,1,1,1]]\t\n",
+    "# print(square(square_list))\n",
+    "# #12\n",
+    "# square_list = [[0,1,1,1,1],[1,1,1,1,1],[1,1,1,1,1],[1,1,1,1,1],[1,1,1,1,1]]\n",
+    "square_list = [[1,1,1,1,1],[1,0,1,1,1],[1,1,1,1,1],[1,1,1,1,1],[1,1,1,1,1]]\n",
+    "print(square(square_list))\n",
+    "#20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['s2', 's10', 's12', 's5']\n['s10', 's12', 's5']\n['s12', 's5']\n['s5']\n[('s1', 's2'), ('s2', 's10'), ('s2', 's12'), ('s2', 's5')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def graph_algorithm(graph, start):\n",
+    "    \n",
+    "    node_list = list(graph) \n",
+    "    node_list.remove(start)\n",
+    "        \n",
+    "    visit_node = [start]\n",
+    "    path_list = []\n",
+    "    next_node = None\n",
+    "\n",
+    "    while node_list:\n",
+    "        print(node_list)\n",
+    "        distance_of_node = 10\n",
+    "        for start_index in visit_node:\n",
+    "            # print(\"start_idx : \",start_index)\n",
+    "            for distance_index in graph[start_index]:\n",
+    "                if distance_index in visit_node or start_index == distance_index:\n",
+    "                    ##### 소스코드 작성 #####\n",
+    "                    # pass # 문제를 푸실 때 pass를 지워주세요\n",
+    "                    continue\n",
+    "                elif graph[start_index][distance_index] < distance_of_node:\n",
+    "                    # print(graph[start_index][distance_index] ,distance_index)\n",
+    "                    ##### 소스코드 작성 #####\n",
+    "                    pre_node = start_index\n",
+    "                    next_node = distance_index\n",
+    "                    distance_of_node = graph[start_index][distance_index]\n",
+    "                    # continue\n",
+    "        path_list.append((pre_node, next_node))\n",
+    "        visit_node.append(next_node)\n",
+    "        node_list.remove(next_node)\n",
+    "\n",
+    "    return path_list\n",
+    "\n",
+    "\n",
+    "weighted_graph = {  \n",
+    "    \"s1\":{\"s1\": 0, \"s2\": 2, \"s10\": 3, \"s12\": 4, \"s5\":3},\n",
+    "    \"s2\":{\"s1\": 1, \"s2\": 0, \"s10\": 2, \"s12\": 2, \"s5\":2},\n",
+    "    \"s10\":{\"s1\": 2, \"s2\": 6, \"s10\": 0, \"s12\":3, \"s5\":4},\n",
+    "    \"s12\":{\"s1\": 3, \"s2\": 5, \"s10\": 2, \"s12\":0,\"s5\":2},\n",
+    "    \"s5\":{\"s1\": 3, \"s2\": 5, \"s10\": 2, \"s12\":4,\"s5\":0},\n",
+    "}\n",
+    "\n",
+    "path_list2 = graph_algorithm(weighted_graph, 's1')\n",
+    "print(path_list2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1001\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "884"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 66
+    }
+   ],
+   "source": [
+    "def coin_exchange(piece_price, piece_price_len, total_price):\n",
+    "\n",
+    "    way_of_number = [0 for temp in range(total_price + 1)]\n",
+    "    print(len(way_of_number))\n",
+    "    way_of_number[0] = 1\n",
+    "    ##### 소스코드 작성 #####\n",
+    "    for c,coin in enumerate(piece_price):\n",
+    "        for price,way in enumerate(way_of_number):\n",
+    "            if price >= coin:\n",
+    "                way_of_number[price]+=way_of_number[price-coin]\n",
+    "                # if price % coin ==0 :\n",
+    "                #     if c==0:\n",
+    "                #         way_of_number[price]+=1\n",
+    "                #     else:\n",
+    "                #         way_of_number[price]+= price//coin-1\n",
+    "                # else:\n",
+    "\n",
+    "        \n",
+    "        # print(coin)\n",
+    "        # print(way_of_number)\n",
+    "            # elif \n",
+    "            \n",
+    "            \n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    return way_of_number[total_price]\n",
+    "# coin_exchange([10,20,30], 3, 40) # == 4 #, \"100원 200원 300원으로 400원을 만들 수 있는 방법은 4가지 입니다.\"\n",
+    "# coin_exchange([100,200,300], 3, 400) # == 4 #, \"100원 200원 300원으로 400원을 만들 수 있는 방법은 4가지 입니다.\"\n",
+    "# coin_exchange([10,20,30], 3, 50) # == 5 #, \"10원 20원 30원으로 50원을 만들 수 있는 방법은 5가지 입니다.\"\n",
+    "coin_exchange([10,20,30], 3, 1000) # == 884 #, \"10원 20원 30원으로 1000원을 만들 수 있는 방법은 884가지 입니다.\"\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
